--- a/templates/components/product-card.html
+++ b/templates/components/product-card.html
@@ -7,7 +7,11 @@
         <h3 class="product-card__title"> {{ product.title }} </h3>
         <div class="product-card__purchase">
             <p class="product-card__price">$ {{ product.price }}</p>
-            <button class="product-card__cart-button"></button>
+            {% if product.stock %}
+                <button class="product-card__cart-button"></button>
+            {% else %}
+                <p class="product-card__out-of-stock">Agotado</p>
+            {% endif %}
         </div>
     </div>
     <a href="#" class="product-card__detail-button">
