--- a/static/styles/administrador.css
+++ b/static/styles/administrador.css
@@ -1,3 +1,16 @@
+.message.info {
+    color: white;
+    background-color: var(--relieve);    
+    font-size: 2.4rem;
+    padding: 16px 20px;
+    text-align: start;
+    border-radius: 0;
+}
+
+.message.success {
+    font-size: 1.7rem;
+}
+
 .administrador {
     padding: 16px;
 }
