--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="CLAN-F, tienda electrónica, productos con Inteligencia Artificial, IA, innovación, tecnología avanzada, automatización del hogar" />
     <meta name="description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://paylemanc.github.io/CLAN-F--e-commerce/" />
+    <meta property="og:url" content="https://paylemanc.pythonanywhere.com/" />
     <meta property="og:title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta property="og:description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
     <meta property="og:image" content="https://github.com/PaylemanC/CLAN-F--e-commerce/blob/main/assets/img/portada.png" />
